deploy30/approval-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-approval-service
  namespace: bladex
  labels:
    app: app-approval-service
spec:
  ports:
  - port: 8009
    targetPort: 8009
    protocol: TCP
  selector:
    app: app-approval-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-approval-service
  namespace: bladex
  labels:
    app: app-approval-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-approval-service
  template:
    metadata:
      labels:
        app: app-approval-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-approval-pod
        image: 192.168.127.158:5000/app-approval-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8009
        volumeMounts:
        - mountPath : /app/approval/logs/blade-approval
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-approval
