deploy30/auth-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-auth-service
  namespace: bladex
  labels:
    app: app-auth-service
spec:
  ports:
  - port: 8100
    targetPort: 8100
    protocol: TCP
  selector:
    app: app-auth-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-auth-service
  namespace: bladex
  labels:
    app: app-auth-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-auth-service
  template:
    metadata:
      labels:
        app: app-auth-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-auth-pod
        image: 192.168.127.158:5000/app-auth-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8100
        volumeMounts:
        - mountPath : /app/auth/logs/blade-auth
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-auth
