deploy30/community-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-community-service
  namespace: bladex
  labels:
    app: app-community-service
spec:
  ports:
  - port: 8201
    targetPort: 8201
    protocol: TCP
  selector:
    app: app-community-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-community-service
  namespace: bladex
  labels:
    app: app-community-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-community-service
  template:
    metadata:
      labels:
        app: app-community-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-community-pod
        image: 192.168.127.158:5000/app-community-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8201
        volumeMounts:
        - mountPath : /app/community/logs/blade-community
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-community
