deploy30/desk-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-desk-service
  namespace: bladex
  labels:
    app: app-desk-service
spec:
  ports:
  - port: 8105
    targetPort: 8105
    protocol: TCP
  selector:
    app: app-desk-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-desk-service
  namespace: bladex
  labels:
    app: app-desk-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-desk-service
  template:
    metadata:
      labels:
        app: app-desk-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-desk-pod
        image: 192.168.127.158:5000/app-desk-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8105
        volumeMounts:
        - mountPath : /app/desk/logs/blade-desk
          name: log-vol
      volumes:
      - name: log-vol
        #emptyDir: {}
        hostPath:
          path: /home/logs/blade-desk
