deploy30/flow-design-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-flow-design-service
  namespace: bladex
  labels:
    app: app-flow-design-service
spec:
  type: NodePort
  ports:
  - port: 9999
    targetPort: 9999
    protocol: TCP
    nodePort: 38888
  selector:
    app: app-flow-design-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-flow-design-service
  namespace: bladex
  labels:
    app: app-flow-design-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-flow-design-service
  template:
    metadata:
      labels:
        app: app-flow-design-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-flow-design-pod
        image: 192.168.127.158:5000/app-flow-design-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9999
        volumeMounts:
        - mountPath : /app/flow-design/logs/blade-flow-design
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-flow-design
