deploy30/log-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-log-service
  namespace: bladex
  labels:
    app: app-log-service
spec:
  ports:
  - port: 8103
    targetPort: 8103
    protocol: TCP
  selector:
    app: app-log-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-log-service
  namespace: bladex
  labels:
    app: app-log-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-log-service
  template:
    metadata:
      labels:
        app: app-log-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-log-pod
        image: 192.168.127.158:5000/app-log-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8103
        volumeMounts:
        - mountPath : /app/log/logs/blade-log
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-log
