deploy30/mysql-endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-service
  namespace: bladex
  labels:
    app: mysql-service
subsets:
- addresses:
  - ip: 116.63.189.30
  ports:
    - protocol: TCP
      name: mysql
      port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: bladex
  labels:
    app: mysql-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: mysql
      port: 3306
      targetPort: 3306
      nodePort: 33306
