deploy30/redis-endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-service
  namespace: bladex
  labels:
    app: redis-service
subsets:
- addresses:
  - ip: 192.168.127.136
  ports:
    - protocol: TCP
      name: redis
      port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: bladex
  labels:
    app: redis-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: redis
      port: 6379
      targetPort: 6379
      nodePort: 36379
