deploy30/resource-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-resource-service
  namespace: bladex
  labels:
    app: app-resource-service
spec:
  ports:
  - port: 8010
    targetPort: 8010
    protocol: TCP
  selector:
    app: app-resource-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-resource-service
  namespace: bladex
  labels:
    app: app-resource-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-resource-service
  template:
    metadata:
      labels:
        app: app-resource-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-resource-pod
        image: 192.168.127.158:5000/app-resource-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8010
        volumeMounts:
        - mountPath : /app/resource/logs/blade-resource
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-resource
