deploy30/system-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-system-service
  namespace: bladex
  labels:
    app: app-system-service
spec:
  ports:
  - port: 8106
    targetPort: 8106
    protocol: TCP
  selector:
    app: app-system-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-system-service
  namespace: bladex
  labels:
    app: app-system-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-system-service
  template:
    metadata:
      labels:
        app: app-system-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-system-pod
        image: 192.168.127.158:5000/app-system-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8106
        volumeMounts:
        - mountPath : /app/system/logs/blade-system
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-system
