deploy30/user-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-user-service
  namespace: bladex
  labels:
    app: app-user-service
spec:
  ports:
  - port: 8102
    targetPort: 8102
    protocol: TCP
  selector:
    app: app-user-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-user-service
  namespace: bladex
  labels:
    app: app-user-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-user-service
  template:
    metadata:
      labels:
        app: app-user-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-user-pod
        image: 192.168.127.158:5000/app-user-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8102
        volumeMounts:
        - mountPath : /app/user/logs/blade-user
          name: log-vol
      volumes:
      - name: log-vol
        hostPath:
          path: /home/logs/blade-user
