deploy30/web-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-web-service
  namespace: bladex
  labels:
    app: app-web-service
spec:
  #type: NodePort
  ports:
  - port: 80
    #nodePort: 30008
    targetPort: 80
    protocol: TCP
  selector:
    app: app-web-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web-service
  namespace: bladex
  labels:
    app: app-web-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web-service
  template:
    metadata:
      labels:
        app: app-web-service
    spec:
      #hostNetwork: true
      containers:
      - name: app-web-pod
        image: 192.168.127.158:5000/app-web:1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 0.1
            memory: 128Mi
          limits:
            cpu: 0.2
            memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath : /opt/applog
          name: my-volume
      volumes:
      - name: my-volume
        emptyDir: {}
